[package]
name = "dolarhoje"
version = "1.0.4"
edition = "2021"
authors = ["Jonathan Schweder <jonathanschweder@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jaswdr/dolarhoje"
documentation = "https://docs.rs/dolarhoje/latest/dolarhoje/fn.get.html"
homepage = "https://github.com/jaswdr/dolarhoje"
description = """
A lightweight and efficient Rust library designed to fetch the current exchange rate of the US Dollar (USD) against the Brazilian Real (BRL).
"""
categories = ["finance"]

[dependencies]
reqwest = { version = "0.12.26", features = ["blocking"] }
regex = "1.12.2"